--- a/views/web/sudah_login/bukti_pemesanan.ejs
+++ b/views/web/sudah_login/bukti_pemesanan.ejs
@@ -524,7 +524,7 @@
                                         <a href="#">placeholder@email.com</a>
                                     </div>
 
-                                    <div class="watermark">LUNAS</div>
+                                    <div class="watermark"></div>
         </div>
     </section>
 
