--- a/views/dashAdmin/navbarDash.ejs
+++ b/views/dashAdmin/navbarDash.ejs
@@ -1,22 +1,33 @@
-<link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+<link rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/dashAdmin/dashNav.css">
 <script src="/scriptJS/navToggleDash.js" defer></script>
 <nav class="navbar">
     <div class="navbar-brand">
-        <img src="/foto/logo_ngiklanmurah.png" alt="Logo" class="logo"> <span class="brand-text"><strong class="br-hitam">Ngiklan</strong> <span class="br-merah"><strong>Murah</strong></span> </span>
-       
+        <img src="/foto/logo_ngiklanmurah.png" alt="Logo" class="logo"> <span class="brand-text"><strong
+                class="br-hitam">Ngiklan</strong> <span class="br-merah"><strong>Murah</strong></span> </span>
+
         <button class="navbar-toggle" id="toggleNavbar">
             <span class="las la-bars"></span>
         </button>
     </div>
     <ul class="navbar-menu" id="navbarMenu">
         <li><a href="/admin/dashboardAdmin"><span class="las la-home"></span> Home</a></li>
-        <li><a href="/admin/dashboardAdmin/aporan-analitik-user"><span class="las la-chart-pie"></span> Analytics</a></li>
-     
+        <li><a href="/admin/dashboardAdmin/aporan-analitik-user"><span class="las la-chart-pie"></span> Analytics</a>
+        </li>
 
 
-        <li><a href="#"><span class="las la-balance-scale"></span> Permintaan Pembayaran</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle">
+                <span class="las la-balance-scale"></span> Pembayaran <span class="dropdown-arrow"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="/admin/dashboardAdmin/cek-pembayaran">Pengecekan</a></li>
+                <li><a href="#">Semua Data Pembayaran</a></li>
+            </ul>
+        </li>
+  
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">
                 <span class="lab la-dropbox"></span> Vendor <span class="dropdown-arrow"></span>
@@ -37,7 +48,7 @@
             </ul>
         </li>
 
-        
+
         <li><a href="/admin/dashboardAdmin/pengaturan-akun"><span class="las la-user"></span>Akun Saya</a></li>
 
 
